--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,33 @@
 .container {
     display: flex;
-    flex-direction: column; /* For demonstration */
+    flex-direction: column;
 }
 
 .box {
     padding: 20px;
     margin: 10px;
-    border: 1px sold black; /* Typo in 'solid' */
-    background-color: #f0f0f0;
-    box-sizing: content-box; /* Box model issue */
+    border: 1px sold black;
+    background-color: #84A59D;
+    box-sizing: content-box;
 }
 
 .special {
     margin: 5px;
-    background-color: pink;
+    background-color: #F6BD60;
 }
 
 .box.special {
-    border: 4px dotted red;
+    border: 4px dotted #5D2A42;
+}
+
+.flex-container {
+    display: flex;
 }
 
 .flex-item {
     padding: 20px;
     margin: 10px;
     border: 2px solid black;
-    background-color: lightgrey;
-    /* Missing flex properties to demonstrate issues */
+    background-color: #016FB9;
+    color: white;
 }
