--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,16 @@
 }
 
 .box {
-    padding: 20px;
+    padding: 30px;
     margin: 10px;
-    border: 1px sold black;
+    border: 1px solid black;
     background-color: #84A59D;
     box-sizing: content-box;
+}
+
+#yellow-box {
+    background-color: yellow;
+    border: 4px dotted #5D2A42;
 }
 
 .special {
