--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@
     border: 4px dotted #5D2A42;
 }
 
+#more-padding{
+    padding: 50px;
+}
+
 .special {
     margin: 5px;
     background-color: #F6BD60;
@@ -25,8 +29,14 @@
     border: 4px dotted #5D2A42;
 }
 
+/*Adjusts the alignment and spacing*/
 .flex-container {
     display: flex;
+}
+
+.feature-container{
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .flex-item {
@@ -35,4 +45,42 @@
     border: 2px solid black;
     background-color: #016FB9;
     color: white;
+}
+
+
+.feature-item {
+    flex: 1 1 100px;
+    margin: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.feature-item img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.image-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.image-wrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.centered-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 8px 12px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  border-radius: 4px;
+  text-align: center;
 }
